--- a/css/style.css
+++ b/css/style.css
@@ -117,3 +117,18 @@ hr{
     border-radius: 15px;
     padding: 5px;
 }
+/* responcive */
+@media only screen and (max-width:688px) {
+    .players{
+        grid-template-columns: repeat(1,1fr);
+    }
+    main{
+        align-items: flex-start;
+    }
+    .top-blog{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .blogs{
+        flex-direction: column;
+    }
+}
